@@ -1,3 +1,7 @@
+2006-04-10  Ben Elliston  <bje@au.ibm.com>
+
+	* contrib: Remove directory.
+
 2006-04-06  Carlos O'Donell <carlos@codesourcery.com>
 
 	* Makefile.tpl: Add install-html target.
